--- a/index-1.html
+++ b/index-1.html
@@ -45,34 +45,40 @@
           </nav>
     </header>
     <main>
-       <section>
-            <div>
-                <h1>Digital Art Templates for Moms</h1>
-                <p>Welcome to a space designed just for moms! Whether you’re looking for creative inspiration, helpful resources, or
-                just a little time for yourself, you’ll find it all here.
-                </p>
-                <img src="/pictures/Firefly -A mom staring at a blank canvas with a frustrated or overwhelmed expression, surrounded by .jpg" alt="Mom looking overwhelmed">
-            </div>
-        </section>
-        <section id="section-2">
-          <div>
-              <h1>Helping Moms Stay Creative & Organized!</h1>
-              <p>Templates, Resources, and Inspiration for Busy Moms.</p>
-          </div>  
-          <div>
-              <h2>Explore our Resources</h2>
-              <img src="/pictures/Firefly a busy mom who turned her passion for art into a beautiful, downloadable template that she’s.jpg" alt="Mom drawing">
-          </div>
-          <div>
-            <h2>Successs Stories</h2>
-            <img src="/pictures/Firefly -A close-up of a hand attempting to draw a complex design freehand, with visible eraser mark.jpg" alt="Mom attempting art">
-        </div>
+      <section class="cta">
         <div>
+            <h1>Digital Art Templates for Moms</h1>
+            <p>Welcome to a space designed just for moms! Whether you’re looking for creative inspiration, helpful resources, or
+            just a little time for yourself, you’ll find it all here.</p>
+            <img src="/pictures/Firefly -A mom staring at a blank canvas with a frustrated or overwhelmed expression, surrounded by .jpg" 
+            alt="Mom looking overwhelmed">
+            <button>Get Started</button>
+        </div>
+    </section>
+    <section id="section-2" class="main-section">
+      <div>
+          <h2>Helping Moms Stay Creative & Organized!</h2>
+          <p>Templates, Resources, and Inspiration for Busy Moms.</p>
+      </div>  
+  </section>
+  
+  <section class="featured">
+      <div class="featured-item">
+          <h2>Explore our Resources</h2>
+          <img src="/pictures/Firefly a busy mom who turned her passion for art into a beautiful, downloadable template that she’s.jpg" alt="Mom drawing">
+      </div>
+      <div class="featured-item">
+          <h2>Success Stories</h2>
+          <img src="/pictures/Firefly -A close-up of a hand attempting to draw a complex design freehand, with visible eraser mark.jpg" alt="Mom attempting art">
+      </div>
+      <div class="featured-item">
           <h2>Join Our Community</h2>
           <img src="/pictures/Firefly Illustrated personas of your target audience (e.g., a busy mom, a beginner artist, a teacher.jpg" alt="A Community of moms">
       </div>
-        </section>
+  </section>
     </main>
-    <footer><p>Copright 2025 Animation Class</p></footer>
+    <footer class="footer">
+      <p>Copyright 2025 Animation Class</p>
+  </footer>
 </body>
 </html>
