--- a/shop.html
+++ b/shop.html
@@ -50,28 +50,59 @@
             <h1>Products</h1>
         </div>
     </section>
-    <section>
-        <div>
-            <h2>Dinosaur</h2>
-            <img src="/pictures/Firefly black and white drawing of ; children's illustration dinosaur 33868.jpg" alt="dinosaur">
+    <section class="container">
+        <!-- Row for Products -->
+        <div class="row g-4">
+            <!-- Product 1 -->
+            <div class="col-md-4">
+                <div class="card">
+                    <img src="/pictures/Firefly black and white drawing of ; children's illustration dinosaur 33868.jpg" class="card-img-top" alt="dinosaur">
+                    <div class="card-body">
+                        <h5 class="card-title">Dinosaur</h5>
+                    </div>
+                </div>
+            </div>
+            <!-- Product 2 -->
+            <div class="col-md-4">
+                <div class="card">
+                    <img src="/pictures/Firefly black and white drawing of ; children's illustration sunflowers 86662.jpg" class="card-img-top" alt="sunflowers">
+                    <div class="card-body">
+                        <h5 class="card-title">Sunflowers</h5>
+                    </div>
+                </div>
+            </div>
+            <!-- Product 3 -->
+            <div class="col-md-4">
+                <div class="card">
+                    <img src="/pictures/Firefly black and white drawing of a butterfly on a flower 30992.jpg" class="card-img-top" alt="butterfly on flower">
+                    <div class="card-body">
+                        <h5 class="card-title">Butterfly on Flowers</h5>
+                    </div>
+                </div>
+            </div>
+            <!-- Product 4 -->
+            <div class="col-md-4">
+                <div class="card">
+                    <img src="/pictures/Firefly Create a bold, high-contrast, black-and-white line drawing of a cute baby elephant sitting w.jpg" class="card-img-top" alt="baby elephant">
+                    <div class="card-body">
+                        <h5 class="card-title">Baby Elephant</h5>
+                    </div>
+                </div>
+            </div>
+            <!-- Product 5 -->
+            <div class="col-md-4">
+                <div class="card">
+                    <img src="pictures/Firefly black and white drawing of a girl with an umbrella on the background; children's illustratio.jpg" class="card-img-top" alt="girl in rain">
+                    <div class="card-body">
+                        <h5 class="card-title">Girl In Rain</h5>
+                    </div>
+                </div>
+            </div>  
         </div>
-        <div>
-            <h2>Sunflowers</h2>
-            <img src="/pictures/Firefly black and white drawing of ; children's illustration sunflowers 86662.jpg" alt="sunflowers">
-        </div>
-        <div>
-            <h2>Butterfly on Flowers</h2>
-            <img src="/pictures/Firefly black and white drawing of a butterfly on a flower 30992.jpg" alt="butterfly on flower">
-        </div>
-        <div>
-            <h2>Baby Elephant</h2>
-            <img src="/pictures/Firefly Create a bold, high-contrast, black-and-white line drawing of a cute baby elephant sitting w.jpg" alt="baby elephant">
-        </div>
-        <div>
-            <h2>Girl In Rain</h2>
-            <img src="pictures/Firefly black and white drawing of a girl with an umbrella on the background; children's illustratio.jpg" alt="girl in rain">
-        </div>  
-      </section>
-</main>   
+    </section>
+</main> 
+<footer class="footer">
+  <p>Copyright 2025 Animation Class</p>
+</footer>  
 </body>
 </html>
