--- a/about.html
+++ b/about.html
@@ -3,12 +3,60 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About</title>
+    <title>About Me</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
     rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" 
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
    <link rel="stylesheet" href="/css/style.css">
+    <style>
+      /* About Page Specific Styles */
+
+/* Style for the main heading */
+.about-section h1 {
+    text-align: center;
+    background-color: rgb(248, 202, 141); /* Light background color */
+    padding: 20px;
+    border-radius: 10px;
+    margin-bottom: 30px;
+    font-size: 3rem;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1); /* Light shadow */
+}
+
+/* Profile image */
+.about-section img {
+    max-width: 100%; /* Ensure the image is responsive */
+    height: auto;
+    border-radius: 50%; /* Makes the image round */
+    margin-bottom: 20px;
+}
+
+/* Style for h2 (subheading) */
+.about-section h2 {
+    font-size: 2rem;
+    font-weight: normal;
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+/* Paragraph text */
+.about-section p {
+    font-size: 1.1rem;
+    line-height: 1.6;
+    margin-bottom: 15px;
+}
+
+/* Responsive design */
+@media (max-width: 768px) {
+    .about-section .row {
+        text-align: center;
+    }
+    .about-section .col-md-4, .about-section .col-md-8 {
+        margin-bottom: 20px;
+    }
+}
+
+    </style>
 </head>
 <body>
    <header>
@@ -21,23 +69,13 @@
              <div class="collapse navbar-collapse" id="navbarNavDropdown">
                <ul class="navbar-nav">
                  <li class="nav-item">
-                   <a class="nav-link active" aria-current="page" href="/shop.html">Shop</a>
+                   <a class="nav-link active" aria-current="page" href="/about.html">About</a>
                  </li>
                  <li class="nav-item">
-                   <a class="nav-link" href="/about.html">About</a>
+                   <a class="nav-link" href="/shop.html">Shop</a>
                  </li>
                  <li class="nav-item">
                    <a class="nav-link" href="index-1.html#section-2">More</a>
-                 </li>
-                 <li class="nav-item dropdown">
-                   <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                     More Items
-                   </a>
-                   <ul class="dropdown-menu">
-                     <li><a class="dropdown-item" href="/services.html">Services</a></li>
-                     <li><a class="dropdown-item" href="/contact.html">Contact</a></li>
-                     <li><a class="dropdown-item" href="/account.html">Account</a></li>
-                   </ul>
                  </li>
                </ul>
              </div>
@@ -45,14 +83,29 @@
          </nav>
    </header>
    <main>
-        <section>
-            <h1>Get to know me and why I created this space</h1>
-            <p>Mission & Vision: Our goal is to provide moms with fun, practical, and creative tools to simplify life and bring joy</p>
-            <p>Our Story: A little background on how and why we started this journey</p>
-        </section>
-        <section>
-            <img src="/pictures/Firefly mom art templates, artist and creative; painting with children with colored chalk 79418.jpg" alt="Mom looking overwhelmed">
+        <section class="about-section">
+            <h1>About</h1>
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-4">
+                        <img src="/pictures/Firefly a busy mom who turned her passion for art into a beautiful, downloadable template that she’s.jpg" alt="Your Name" class="img-fluid rounded-circle">
+                    </div>
+                    <div class="col-md-8">
+                        <h2>Hi, I'm Rachel Nelson</h2>
+                        <p>Welcome to my little corner of the internet! I’m a stay-at-home mama, and I’m passionate about art, design, organization, creativity, etc. This website is a reflection of my love for design and my journey to create something that brings value to others.</p>
+                        <p>I started this project because I believe in the power of creativity, organization, and helping others. I wanted to share my ideas, my work, and the resources I’ve created to help others like you. Whether you’re here to find inspiration, educational content, etc. or just to learn more about me, I’m so glad you stopped by!</p>
+                        <p>A little about me: I’m passionate about helping people embrace their creativity, especially in the chaos of everyday life. I believe that even in our busiest moments, we can find time for the things that bring us joy—whether it’s making something beautiful or simply organizing our day. This website is my way of sharing that mission.
+                          When I’m not working, you can usually find me crocheting, riding my bike, or daydreaming about my next big adventure with my family. I believe creativity is a lifelong journey, and I’m always looking for new ways to express myself and inspire others along the way.</p>
+                        <p>"I believe that art is a form of self-expression that is accessible to everyone. It’s not just about creating something beautiful—it’s about capturing emotions, telling stories, and finding joy in the process. Whether it’s through design, drawing, or simply organizing your space, art has the power to inspire, connect, 
+                          and bring peace to our busy lives.</p>
+                        <p>Thank you for visiting, and I hope you find something here that sparks your creativity or helps you on your own journey!</p>
+                      </div>
+                </div>
+            </div>
         </section>
    </main> 
+   <footer class="footer">
+    <p>Copyright 2025 Animation Class</p>
+</footer>
 </body>
 </html>
