--- a/contact.html
+++ b/contact.html
@@ -43,6 +43,9 @@
              </div>
            </div>
          </nav>
-   </header>   
+   </header>
+   <footer class="footer">
+    <p>Copyright 2025 Animation Class</p>
+</footer>   
 </body>
 </html>
