--- a/account.html
+++ b/account.html
@@ -9,6 +9,42 @@
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" 
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
    <link rel="stylesheet" href="/css/style.css">
+
+   <style>
+    /* Embedded CSS for the account mockup */
+    body {
+      background-color: #fdfdfd;
+      margin: 0;
+      font-family: Arial, sans-serif;
+    }
+
+    main {
+      height: 80vh;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      text-align: center;
+      padding: 40px;
+    }
+
+    h1 {
+      font-size: 2rem;
+      font-weight: 600;
+      color: #333;
+      margin-bottom: 20px;
+    }
+
+    p.lead {
+      color: #666;
+      font-size: 1.1rem;
+      margin-bottom: 30px;
+    }
+
+    img {
+      max-width: 300px;
+    }
+  </style>
 </head>
 <body>
    <header>
@@ -44,6 +80,11 @@
            </div>
          </nav>
    </header>
+   <main class="d-flex flex-column align-items-center justify-content-center text-center" style="height: 80vh;">
+    <h1 class="mb-4">Account Features Coming Soon!</h1>
+    <p class="lead mb-3">We're working on personalized tools just for you—stay tuned!</p>
+    <img src="/pictures/under-construction.svg" alt="Under construction" style="max-width: 300px;">
+  </main>
    <footer class="footer">
     <p>Copyright 2025 Animation Class</p>
 </footer>   
