--- a/index-1.html
+++ b/index-1.html
@@ -1,3 +1,4 @@
+<!-- 
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -44,7 +45,80 @@
             </div>
           </nav>
     </header>
-    <main>
+  <main>
+    <section class="banner">
+      <div class="banner-textblock">
+        <h1>Main Page heading</h1>
+        <p>this will help with a different layout left to right and not everything in center.</p>
+      </div>
+      <div class="banner-image">
+        <img src="/pictures/Firefly -A mom staring at a blank canvas with a frustrated or overwhelmed expression, surrounded by .jpg" 
+          alt="Mom looking overwhelmed">
+      </div>
+    </section>
+    <section class="banner">
+      <div class="banner-textblock">
+        <h1>This is Fun</h1>
+        <p>this will help with a different layout left to right and not everything in center.</p>
+      </div>
+      <div class="banner-image">
+        <img src="/pictures/Firefly -A mom staring at a blank canvas with a frustrated or overwhelmed expression, surrounded by .jpg" 
+          alt="Mom looking overwhelmed">
+      </div>
+    </section>
+    <section class="banner">
+      <div class="banner-textblock">
+        <h1>but wait there is more!!</h1>
+        <p>this will help with a different layout left to right and not everything in center.</p>
+      </div>
+      <div class="banner-image">
+        <img src="/pictures/Firefly -A mom staring at a blank canvas with a frustrated or overwhelmed expression, surrounded by .jpg" 
+            alt="Mom looking overwhelmed">
+      </div>
+    </section>
+
+  <section class="cards">
+    <div class="cards">
+      <div class="card-image">
+        <div class="card-text-block">
+          <h2>CARD heading</h2>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia sint error repellendus natus iste, minima nostrum, temporibus tenetur iure explicabo est autem! P</p>
+          <img src="/pictures/Firefly -A mom staring at a blank canvas with a frustrated or overwhelmed expression, surrounded by .jpg" 
+            alt="Mom looking overwhelmed">
+        </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="cards">
+      <div class="card-image">
+        <div class="card-text-block">
+          <h2>CARD heading</h2>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia sint error repellendus natus iste, minima nostrum, temporibus tenetur iure explicabo est autem! P</p>
+          <img src="/pictures/Firefly -A mom staring at a blank canvas with a frustrated or overwhelmed expression, surrounded by .jpg" 
+            alt="Mom looking overwhelmed">
+        </div>
+        </div>
+      </div>
+    </div>
+    
+    <div class="cards">
+      <div class="card-image">
+        <div class="card-text-block">
+          <h2>CARD heading</h2>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia sint error repellendus natus iste, minima nostrum, temporibus tenetur iure explicabo est autem! P</p>
+          <img src="/pictures/Firefly -A mom staring at a blank canvas with a frustrated or overwhelmed expression, surrounded by .jpg" 
+            alt="Mom looking overwhelmed">
+        </div>
+        </div>
+      </div>
+    </div>
+</section>
+
+
+
+
+
       <section class="cta">
         <div>
             <h1>Digital Art Templates for Moms</h1>
@@ -80,5 +154,168 @@
     <footer class="footer">
       <p>Copyright 2025 Animation Class</p>
   </footer>
+</body>
+</html>
+-->
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Art At Home</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+        rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+        crossorigin="anonymous" />
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+          integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+          crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="/css/style.css">
+
+<style>
+ .navbar.bg-body-tertiary {
+    background-color:  #b2f0ed !important;
+    border-bottom: 2px solid rgb(2, 255, 255);
+}
+
+.navbar-nav .nav-link {
+    color: #00554e;
+    font-weight: bold;
+}
+
+.navbar-nav .nav-link:hover {
+    color: #016e81;
+}
+
+footer {
+    background-color: #b2f0ed;
+    padding: 1.5rem 0;
+    text-align: center;
+    font-size: 1rem;
+    color: #00554e;
+    border-top: 2px solid rgb(2, 255, 255);
+}
+  
+footer p {
+    margin: 0;
+}
+</style>
+
+</head>
+<body>
+
+  <!-- Navigation -->
+  <header>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="/index-1.html">Homepage</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown"
+                aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="/blog.html">Art Ideas</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/about.html">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="index-1.html#section-2">More</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" role="button"
+                 data-bs-toggle="dropdown" aria-expanded="false">
+                More Items
+              </a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="/shop.html">Shop</a></li>
+                <li><a class="dropdown-item" href="/contact.html">Contact</a></li>
+                <li><a class="dropdown-item" href="/account.html">Account</a></li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </header>
+
+  <!-- Hero Section 1: Content Left, Image Right -->
+  <section class="container hero-section">
+    <div class="row align-items-center">
+      <div class="col-md-6 section-content">
+        <h2>Welcome to Art at Home with Mamas and Littles</h2>
+       <p>Pull up a seat and get cozy — you’re in the right place. Whether you’re a seasoned
+         artist or a caregiver just trying to keep tiny hands busy, this is your space for creative connection. I’m so glad you’re here.</p>
+      </div>
+      <div class="col-md-6">
+        <img src="/pictures/Firefly -A close-up of a hand attempting to draw a complex design freehand, with visible eraser mark.jpg" alt="Art templates preview" />
+      </div>
+    </div>
+  </section>
+
+  <!-- Hero Section 2: Image Left, Content Right -->
+  <section class="container hero-section">
+    <div class="row align-items-center flex-md-row-reverse">
+      <div class="col-md-6 section-content">
+        <h2>Not Sure Where to Start?</h2>
+        <p>Don’t worry — this isn’t about perfection. It’s about showing up with love, a little mess, and a splash of creativity. Whether you need quick art ideas,
+           downloadable templates, or a moment of peace, I’ve got your back. Let’s make something beautiful together.</p>
+      </div>
+      <div class="col-md-6">
+        <img src="/pictures/Firefly -A mom staring at a blank canvas with a frustrated or overwhelmed expression, surrounded by .jpg"  alt="Creative workspace" />
+      </div>
+    </div>
+  </section>
+
+  <!-- Three Cards Section -->
+  <section class="container card-group">
+   <a href="/shop.html" class="text-decoration-none text-dark">
+    <div class="row row-cols-1 row-cols-md-3 g-4">
+      <div class="col">
+        <div class="card h-100">
+          <img src="/pictures/Firefly -Create a decorative floral frame in black-and-white line art, with swirling vines and small.jpg" class="card-img-top" alt="Planner Templates">
+          <div class="card-body">
+            <h5 class="card-title">Downloadable Art Templates Just for You</h5>
+            <p class="card-text">From planners to coloring pages, these easy-to-use templates help you carve out time for creativity — even in the busiest days. Print, play, and personalize.</p>
+          </div>
+        </div>
+      </div>
+   </a>
+   <a href="/about.html" class="text-decoration-none text-dark">
+      <div class="col">
+        <div class="card h-100">
+          <img src="/pictures/Firefly a busy mom who turned her passion for art into a beautiful, downloadable template that she’s.jpg" class="card-img-top" alt="Creative Kits">
+          <div class="card-body">
+            <h5 class="card-title">Made by a Mama, for Mamas</h5>
+            <p class="card-text">Every resource here comes from a place of lived experience — a creative heart trying to balance motherhood and making. I hope it helps you find your own rhythm.
+
+          </p>
+          </div>
+        </div>
+      </div>
+   </a>
+   <a href="/blog.html" class="text-decoration-none text-dark">
+      <div class="col">
+        <div class="card h-100">
+          <img src="/pictures/Firefly art templates 86662.jpg" class="card-img-top" alt="Business Tools">
+          <div class="card-body">
+            <h5 class="card-title">Creative Sparks When You’re Feeling Stuck</h5>
+            <p class="card-text">These ideas aren’t just for the kids — they’re for you too. Reignite your own creativity and find peace in playful moments, no matter your skill level.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+   </a>
+  </section>
+
+  <!-- Footer -->
+  <footer>
+    <p>© 2025 Art Templates by Animation Class</p>
+  </footer>
+
 </body>
 </html>
