--- a/index-1.html
+++ b/index-1.html
@@ -224,8 +224,6 @@ footer p {
               <a class="nav-link" href="/about.html">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="index-1.html#section-2">More</a>
-            </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" role="button"
                  data-bs-toggle="dropdown" aria-expanded="false">
@@ -252,7 +250,7 @@ footer p {
          artist or a caregiver just trying to keep tiny hands busy, this is your space for creative connection. I’m so glad you’re here.</p>
       </div>
       <div class="col-md-6">
-        <img src="/pictures/Firefly -A close-up of a hand attempting to draw a complex design freehand, with visible eraser mark.jpg" alt="Art templates preview" />
+        <img src="/pictures/Firefly I would Like a under construction image something artsy 12685.jpg">
       </div>
     </div>
   </section>
@@ -277,7 +275,7 @@ footer p {
     <div class="row row-cols-1 row-cols-md-3 g-4">
       <div class="col">
         <div class="card h-100">
-          <img src="/pictures/Firefly -Create a decorative floral frame in black-and-white line art, with swirling vines and small.jpg" class="card-img-top" alt="Planner Templates">
+          <img src="/pictures/Sunflower.jpg">
           <div class="card-body">
             <h5 class="card-title">Downloadable Art Templates Just for You</h5>
             <p class="card-text">From planners to coloring pages, these easy-to-use templates help you carve out time for creativity — even in the busiest days. Print, play, and personalize.</p>
@@ -288,7 +286,7 @@ footer p {
    <a href="/about.html" class="text-decoration-none text-dark">
       <div class="col">
         <div class="card h-100">
-          <img src="/pictures/Firefly a busy mom who turned her passion for art into a beautiful, downloadable template that she’s.jpg" class="card-img-top" alt="Creative Kits">
+          <img src="/pictures/plants.jpg">
           <div class="card-body">
             <h5 class="card-title">Made by a Mama, for Mamas</h5>
             <p class="card-text">Every resource here comes from a place of lived experience — a creative heart trying to balance motherhood and making. I hope it helps you find your own rhythm.
