--- a/shop.html
+++ b/shop.html
@@ -1,106 +1,125 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shop</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-    rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" 
-    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-   <link rel="stylesheet" href="/css/style.css">
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Shop page showcasing a variety of black and white art drawings including dinosaurs, sunflowers, elephants, and more." />
+  <title>Shop</title>
+
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" 
+        rel="stylesheet" 
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" 
+        crossorigin="anonymous" />
+
+  <!-- Custom CSS -->
+  <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
-   <header>
-       <nav class="navbar navbar-expand-lg bg-body-tertiary">
-           <div class="container-fluid">
-             <a class="navbar-brand" href="/index-1.html">Homepage</a>
-             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-               <span class="navbar-toggler-icon"></span>
-             </button>
-             <div class="collapse navbar-collapse" id="navbarNavDropdown">
-               <ul class="navbar-nav">
-                 <li class="nav-item">
-                   <a class="nav-link active" aria-current="page" href="/shop.html">Shop</a>
-                 </li>
-                 <li class="nav-item">
-                   <a class="nav-link" href="/about.html">About</a>
-                 </li>
-                 <li class="nav-item">
-                 <li class="nav-item dropdown">
-                   <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                     More Items
-                   </a>
-                   <ul class="dropdown-menu">
-                     <li><a class="dropdown-item" href="/services.html">Services</a></li>
-                     <li><a class="dropdown-item" href="/contact.html">Contact</a></li>
-                     <li><a class="dropdown-item" href="/account.html">Account</a></li>
-                   </ul>
-                 </li>
-               </ul>
-             </div>
-           </div>
-         </nav>
-   </header>
-   <main>
+  <header>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="index-1.html">Homepage</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" 
+                data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" 
+                aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="shop.html">Shop</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="about.html">About</a>
+            </li>
+            <li class="nav-item">
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                More Items
+              </a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="services.html">Services</a></li>
+                <li><a class="dropdown-item" href="contact.html">Contact</a></li>
+                <li><a class="dropdown-item" href="account.html">Account</a></li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </header>
+
+  <main class="container my-4">
     <section>
-        <div>
-            <h1>Products</h1>
-        </div>
+      <h1 class="mb-4">Products</h1>
+      <p class="mb-5">Browse our collection of high-contrast, black-and-white illustrations perfect for prints, gifts, and decorations.</p>
     </section>
-    <section class="container">
-        <!-- Row for Products -->
-        <div class="row g-4">
-            <!-- Product 1 -->
-            <div class="col-md-4">
-                <div class="card">
-                    <img src="/pictures/Firefly black and white drawing of ; children's illustration dinosaur 33868.jpg" class="card-img-top" alt="dinosaur">
-                    <div class="card-body">
-                        <h5 class="card-title">Dinosaur</h5>
-                    </div>
-                </div>
+
+    <section>
+      <div class="row g-4">
+        <!-- Product 1 -->
+        <div class="col-md-4">
+          <div class="card h-100">
+            <img src="pictures/dino.jpg" class="card-img-top" alt="Black and white drawing of a dinosaur">
+            <div class="card-body">
+              <h5 class="card-title">Dinosaur</h5>
             </div>
-            <!-- Product 2 -->
-            <div class="col-md-4">
-                <div class="card">
-                    <img src="/pictures/Firefly black and white drawing of ; children's illustration sunflowers 86662.jpg" class="card-img-top" alt="sunflowers">
-                    <div class="card-body">
-                        <h5 class="card-title">Sunflowers</h5>
-                    </div>
-                </div>
-            </div>
-            <!-- Product 3 -->
-            <div class="col-md-4">
-                <div class="card">
-                    <img src="/pictures/Firefly black and white drawing of a butterfly on a flower 30992.jpg" class="card-img-top" alt="butterfly on flower">
-                    <div class="card-body">
-                        <h5 class="card-title">Butterfly on Flowers</h5>
-                    </div>
-                </div>
-            </div>
-            <!-- Product 4 -->
-            <div class="col-md-4">
-                <div class="card">
-                    <img src="/pictures/Firefly Create a bold, high-contrast, black-and-white line drawing of a cute baby elephant sitting w.jpg" class="card-img-top" alt="baby elephant">
-                    <div class="card-body">
-                        <h5 class="card-title">Baby Elephant</h5>
-                    </div>
-                </div>
-            </div>
-            <!-- Product 5 -->
-            <div class="col-md-4">
-                <div class="card">
-                    <img src="pictures/Firefly black and white drawing of a girl with an umbrella on the background; children's illustratio.jpg" class="card-img-top" alt="girl in rain">
-                    <div class="card-body">
-                        <h5 class="card-title">Girl In Rain</h5>
-                    </div>
-                </div>
-            </div>  
+          </div>
         </div>
+
+        <!-- Product 2 -->
+        <div class="col-md-4">
+          <div class="card h-100">
+            <img src="pictures/Sunflower.jpg" class="card-img-top" alt="Black and white drawing of sunflowers">
+            <div class="card-body">
+              <h5 class="card-title">Sunflowers</h5>
+            </div>
+          </div>
+        </div>
+
+        <!-- Product 3 -->
+        <div class="col-md-4">
+          <div class="card h-100">
+            <img src="pictures/full buttrtfly on flower.jpg" class="card-img-top" alt="Black and white drawing of a butterfly on a flower">
+            <div class="card-body">
+              <h5 class="card-title">Butterfly on Flowers</h5>
+            </div>
+          </div>
+        </div>
+
+        <!-- Product 4 -->
+        <div class="col-md-4">
+          <div class="card h-100">
+            <img src="pictures/babyelephant.jpg" class="card-img-top" alt="Black and white drawing of a cute baby elephant sitting">
+            <div class="card-body">
+              <h5 class="card-title">Baby Elephant</h5>
+            </div>
+          </div>
+        </div>
+
+        <!-- Product 5 -->
+        <div class="col-md-4">
+          <div class="card h-100">
+            <img src="pictures/girlinrain.jpg" class="card-img-top" alt="Black and white drawing of a girl with an umbrella in the rain">
+            <div class="card-body">
+              <h5 class="card-title">Girl In Rain</h5>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
-</main> 
-<footer class="footer">
-  <p>Copyright 2025 Animation Class</p>
-</footer>  
+  </main>
+
+  <footer class="text-center py-4 bg-light mt-5">
+    <p class="mb-0">&copy; 2025 Animation Class. All rights reserved.</p>
+  </footer>
+
+  <!-- Bootstrap JS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" 
+          integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" 
+          crossorigin="anonymous"></script>
 </body>
 </html>
+
