--- a/blog.html
+++ b/blog.html
@@ -5,40 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Ideas & Inspiration</title>
   <meta name="description" content="Get inspired with creative ideas for planners, printables, and mom-friendly digital resources." />
-  <link rel="stylesheet" href="/css/style.css" />
+  <meta name="keywords" content="planner ideas, mom life, digital printables, creative projects, organization tips" />
+  <link rel="stylesheet" href="css/style.css" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous" defer></script>
-  <style>
-    h1 {
-      text-align: center;
-      padding: 30px;
-      background-color: rgb(248, 202, 141);
-      border-radius: 10px;
-      font-size: 2.5rem;
-      box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
-      margin-bottom: 40px;
-    }
-
-    .card {
-      margin-bottom: 30px;
-      border-radius: 15px;
-      overflow: hidden;
-      box-shadow: 0px 2px 10px rgba(0,0,0,0.1);
-    }
-
-    .card-img-top {
-      object-fit: cover;
-      height: 200px;
-    }
-
-    .intro-text {
-      text-align: center;
-      margin-bottom: 40px;
-      max-width: 700px;
-      margin-left: auto;
-      margin-right: auto;
-    }
-  </style>
 </head>
 <body>
   <header>
@@ -58,7 +28,6 @@
             <li class="nav-item">
               <a class="nav-link" href="/about.html">About</a>
             </li>
-            <li class="nav-item">
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" role="button"
                  data-bs-toggle="dropdown" aria-expanded="false">
@@ -78,77 +47,39 @@
 
   <main>
     <div class="container">
-      <h1>Ideas & Inspiration for Busy Moms and Creatives</h1>
-      <p class="intro-text">
+      <h1 class="text-center p-4 my-4 bg-warning rounded shadow-sm">Ideas & Inspiration for Busy Moms and Creatives</h1>
+      <p class="intro-text text-center mx-auto mb-5" style="max-width: 700px;">
         Explore tips, tools, and ideas to help you balance creativity, family, and business. Whether you're planning your day or designing something beautiful — these ideas are for YOU.
       </p>
 
       <div class="row">
         <!-- Card 1 -->
         <div class="col-md-4">
-          <div class="card">
-            <img src="pictures/Firefly watercolor art illustration of beautiful landscape with sun and clouds 97593.jpg" class="card-img-top" alt="Daily planner with stickers and pen" />
+          <div class="card mb-4 shadow-sm">
+            <img src="pictures/Firefly watercolor art illustration of beautiful landscape with sun and clouds 97593.jpg" class="card-img-top" alt="Artistic watercolor landscape with sun and clouds" />
             <div class="card-body">
               <h5 class="card-title">How to Make a Daily Planner That Works for You</h5>
               <p class="card-text">Ditch the overwhelm and build a daily planner that helps you stay focused without stress. Includes a free downloadable template!</p>
-              <a href="#" class="btn btn-outline-primary">Read More</a>
+              <a href="/blog-post1.html" class="btn btn-outline-primary">Read More</a>
             </div>
           </div>
         </div>
 
         <!-- Card 2 -->
         <div class="col-md-4">
-          <div class="card">
-            <img src="pictures/plane.jpg" class="card-img-top" alt="Colorful kids chore chart" />
+          <div class="card mb-4 shadow-sm">
+            <img src="pictures/plane.jpg" class="card-img-top" alt="Colorful Plane" />
             <div class="card-body">
               <h5 class="card-title">Kid-Friendly Chore Charts That Actually Work</h5>
               <p class="card-text">Tired of the battle? Try our printable chore charts designed to motivate, reward, and make life a little easier for everyone.</p>
-              <a href="#" class="btn btn-outline-primary">Read More</a>
+              <a href="/blog-post2.html" class="btn btn-outline-primary">Read More</a>
             </div>
           </div>
         </div>
 
         <!-- Card 3 -->
         <div class="col-md-4">
-          <div class="card">
-            <img src="pictures/Firefly art that moms would like 64217.jpg" class="card-img-top" alt="Woman working on Canva design on laptop" />
+          <div class="card mb-4 shadow-sm">
+            <img src="pictures/Firefly art that moms would like 64217.jpg" class="card-img-top" alt="Woman designing on Canva using a laptop" />
             <div class="card-body">
-              <h5 class="card-title">Creative Ways to Use Canva for Family Projects</h5>
-              <p class="card-text">From invitations to art prints, discover easy ways to use Canva for making memories, managing schedules, and more.</p>
-              <a href="#" class="btn btn-outline-primary">Read More</a>
-            </div>
-          </div>
-        </div>
-
-        <!-- Card 4 -->
-        <div class="col-md-4">
-          <div class="card">
-            <img src="pictures/printable.jpg" class="card-img-top" alt="Printable art for sale on desk" />
-            <div class="card-body">
-              <h5 class="card-title">Turn Your Art Into Printables You Can Sell</h5>
-              <p class="card-text">Learn the basics of turning your creativity into passive income — all from home, using tools you already love.</p>
-              <a href="#" class="btn btn-outline-primary">Read More</a>
-            </div>
-          </div>
-        </div>
-
-        <!-- Card 5 -->
-        <div class="col-md-4">
-          <div class="card">
-            <img src="pictures/overwhelmed.jpg" class="card-img-top" alt="Mom working on business with toddler" />
-            <div class="card-body">
-              <h5 class="card-title">Balancing Mom Life + Business with Digital Tools</h5>
-              <p class="card-text">How to set up systems that support both your family and your business goals — no burnout required.</p>
-              <a href="#" class="btn btn-outline-primary">Read More</a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </main>
-
-  <footer class="footer text-center p-4 mt-5 bg-light">
-    <p>&copy; 2025 Animation Class. All rights reserved.</p>
-  </footer>
-</body>
-</html>
+              <h5 class="card-title">Creative Ways to Use Canva for Family Projects</h5
