--- a/about.html
+++ b/about.html
@@ -62,34 +62,34 @@
       margin: 0;
     }
 
-.quote-section {
-  padding: 3rem 0;
-  background-color: #e8fafa;
-  color: #004944;
-}
+    .quote-section {
+      padding: 3rem 0;
+      background-color: #e8fafa;
+      color: #004944;
+    }
 
-.pull-quote {
-  font-style: italic;
-  font-size: 1.5rem;
-  font-weight: 500;
-  border-left: 4px solid #00c2b2;
-  padding-left: 1rem;
-  margin-bottom: 0.5rem;
-}
+    .pull-quote {
+      font-style: italic;
+      font-size: 1.5rem;
+      font-weight: 500;
+      border-left: 4px solid #00c2b2;
+      padding-left: 1rem;
+      margin-bottom: 0.5rem;
+    }
 
-.quote-caption {
-  font-size: 1rem;
-  font-weight: 400;
-  color: #00726c;
-}
+    .quote-caption {
+      font-size: 1rem;
+      font-weight: 400;
+      color: #00726c;
+    }
 
-.quote-img {
-  width: 250px;
-  height: 250px;
-  object-fit: cover;
-  border: 4px solid #00c2b2;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-}
+    .quote-img {
+      width: 250px;
+      height: 250px;
+      object-fit: cover;
+      border: 4px solid #00c2b2;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    }
   </style>
 
 </head>
@@ -113,7 +113,6 @@
             <li class="nav-item">
               <a class="nav-link" href="/about.html">About</a>
             </li>
-            <li class="nav-item">
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" role="button"
                  data-bs-toggle="dropdown" aria-expanded="false">
@@ -136,9 +135,7 @@
       <div class="container">
         <div class="row align-items-center">
           <div class="col-md-4 mb-4 mb-md-0">
-            <img src="/pictures/Firefly a busy mom who turned her passion for art into a beautiful, downloadable template that she’s.jpg"
-                 alt="Rachel Nelson"
-                 class="img-fluid rounded-circle shadow">
+            <img src="pictures/Hayden and I.jpeg" alt="hayden and I standing next to eachother" class="img-fluid rounded-circle shadow">
           </div>
           <div class="col-md-8">
             <h2>Hi, I'm Rachel</h2>
@@ -171,14 +168,16 @@
             <p class="quote-caption">– Unknown</p>
           </div>
           <div class="col-md-6 text-center">
-            <img src="/pictures/Firefly -A close-up of a hand attempting to draw a complex design freehand, with visible eraser mark.jpg" alt="Artistic home moment" class="quote-img img-fluid rounded-circle">
+            <img src="/pictures/flower bou1.jpg" alt="Artistic home moment" class="quote-img img-fluid rounded-circle">
           </div>
         </div>
       </div>
     </section>
   </main>
-<footer class="footer">
-  <p>Copyright 2025 Animation Class</p>
-</footer>
+
+  <footer class="footer">
+    <p>Copyright 2025 Animation Class</p>
+  </footer>
+
 </body>
 </html>
