--- a/about.html
+++ b/about.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Art At Home offers creative ideas, printable templates, and fun art moments for families to enjoy together." />
   <title>Art At Home</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
         rel="stylesheet"
@@ -99,7 +100,7 @@
   <header>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
-        <a class="navbar-brand" href="/index-1.html">Homepage</a>
+        <a class="navbar-brand" href="/index.html">Homepage</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown"
                 aria-expanded="false" aria-label="Toggle navigation">
@@ -135,7 +136,7 @@
       <div class="container">
         <div class="row align-items-center">
           <div class="col-md-4 mb-4 mb-md-0">
-            <img src="pictures/Hayden and I.jpeg" alt="hayden and I standing next to eachother" class="img-fluid rounded-circle shadow">
+            <img src="pictures/Hayden and I.jpeg" alt="Rachel and Hayden standing together" class="img-fluid rounded-circle shadow">
           </div>
           <div class="col-md-8">
             <h2>Hi, I'm Rachel</h2>
@@ -168,7 +169,7 @@
             <p class="quote-caption">– Unknown</p>
           </div>
           <div class="col-md-6 text-center">
-            <img src="/pictures/flower bou1.jpg" alt="Artistic home moment" class="quote-img img-fluid rounded-circle">
+            <img src="pictures/flower bou1.jpg" alt="Creative home art moment featuring flowers" class="quote-img img-fluid rounded-circle">
           </div>
         </div>
       </div>
@@ -176,7 +177,7 @@
   </main>
 
   <footer class="footer">
-    <p>Copyright 2025 Animation Class</p>
+    <p>&copy; 2025 Rachel's Art At Home | All rights reserved</p>
   </footer>
 
 </body>
